New recipe added, also "Home" button to the pages.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>   
+    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a> 
+    <a href="../odin-recipes/recipes/locro.html">Locro</a>
+    <a href="../odin-recipes/recipes/pan-banana.html">Pan de Banana</a>
+      
 </body>
 </html>
