--- a/recipes/pan-banana.html
+++ b/recipes/pan-banana.html
@@ -44,6 +44,7 @@
             junto a zumo natura de melón y naranja.</li>
         
     </ol>
+    <a href="../index.html" >Volver al inicio</a>
     
 </body>
 </html>
