Tested fonts, css file added

--- a/recipes/locro.html
+++ b/recipes/locro.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <h1>Locro</h1>
+    <link rel="stylesheet" href="../css/style.css">
+    
 <body>
+    <h1>Locro</h1>
     <img src=".//images/locro.jpeg">
     <h2>Descripción</h2>
     <p>El locro (del quechua ruqru o luqru)es una especie de guiso de origen prehispánico y preincaico,
