--- a/recipes/pan-banana.html
+++ b/recipes/pan-banana.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <h1>Pan de Banana</h1>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <h1>Pan de Banana</h1>
     <img src=".//images/pan_de_banana_57035_600.jpg" alt="Pan de banana">
     <h2>Descripción</h2>
     <br>
