--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es_MX">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
