--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html lang="es_MX">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/style.css">
     </head>
 <body>
     <h1>Lasagna</h1>
@@ -93,6 +94,6 @@
         
     </ol>    
         
-
+<a href="../index.html" >Volver al inicio</a>
 </body>
 </html>
